# app/controllers/auth.controller.js
@@ -1,11 +1,15 @@
 require("dotenv").config();
 const config = require("../config/auth.config");
 const sendEmail = require("../utils/email");
+const {sendSMS} = require("../utils/sms");
 const db = require("../models");
 const User = db.user;
 var jwt  = require("jsonwebtoken");
 var {TokenExpiredError}  = require("jsonwebtoken");
 var bcrypt = require("bcryptjs");
+const Vonage = require('@vonage/server-sdk')
+
+
 
 /**
  * 
@@ -17,6 +21,7 @@ var bcrypt = require("bcryptjs");
  * @property {string} name this is name in request body
  * @property {string} username this is username in request body
  * @property {string} email this is email in request body
+ * @property {string} phoneNumber this is phone number in request body
  * @property {string} password this is password in request body
  * @property {Date} dateOfBirth this is date of birth in request body
  */
@@ -37,10 +42,12 @@ var bcrypt = require("bcryptjs");
 exports.signup = function signup(req, res) {
   // name , email or phone, date of birth
   //validation
+  //added phone to user object
   const user = new User({
     name: req.body.name,
     username: req.body.username,
     email: req.body.email,
+    phoneNumber: req.body.phoneNumber,
     dateOfBirth: req.body.dateOfBirth,
     password: bcrypt.hashSync(req.body.password, 8),
     created_at : new Date(),
@@ -48,8 +55,8 @@ exports.signup = function signup(req, res) {
   });
   user.save((err, user) => {
     if (err) {
-      //console.log(err);
-      res.status(500).send({ message: err });
+      console.log(err);
+      //res.status(500).send({ message: err });
       return;
     }
   });
@@ -57,7 +64,6 @@ exports.signup = function signup(req, res) {
   // remove the password from jwt.sign if not redirecting
   // sendEmail(user.email, "Confirm Email", message);
   // res.status(200).send({ message: "An Email sent to your account please verify", emailtoken: emailToken });
-  
   jwt.sign(
     {
       "id" :user._id,
@@ -76,17 +82,104 @@ exports.signup = function signup(req, res) {
       // <p>Please click this email to confirm your email:</p>
       // <a href="${process.env.BASE_URL}/auth/confirmation/${emailToken}">click here to confirm your email</a>
       // <p>Thank you very much</p>`;
-      const message = `<p>You have a new email comfirmation request</p>
-      <p>Please copy this verification code to confirm your email: ${user.verificationCode}</p>
-      <p>Thank you very much</p>`;
-      sendEmail(user.email, "Confirm Email", message);
-      res.status(200).send({ message: "An Email sent to your account please verify", emailtoken: emailToken });
-    },
-    );
+      if (req.body.email){
+        const message = `<p>You have a new email comfirmation request</p>
+        <p>Please copy this verification code to confirm your email: ${user.verificationCode}</p>
+        <p>Thank you very much</p>`;
+        sendEmail(user.email, "Confirm Email", message);
+        res.status(200).send({ message: "An Email sent to your account please verify", emailtoken: emailToken });
+      }
+      else if (req.body.phoneNumber){
+        const from = "Twitter Team"
+        const to = req.body.phoneNumber
+        const text = `Please copy this verification code to confirm your mobile phone: ${user.verificationCode} Thank you very much`;
+        const message = "A verification code was sent to your mobile phone please verify";
+        const isSent = sendSMS(from, to, text );
+        console.log(isSent);
+        if(isSent){
+          res.status(200).send({ message: message, emailtoken: emailToken });
+        }else{
+          res.status(500).send({ message: `sms didn't send error`});
+        }
+        // vonage.message.sendSms(from, to, text, (err, responseData) => {
+          //     if (err) {
+            //         console.log(err);
+            //     } else {
+              //         if(responseData.messages[0]['status'] === "0") {
+                //             console.log("Message sent successfully.");
+                //             res.status(200).send({ message: "A verification code was sent to your mobile phone please verify", emailtoken: emailToken });
+                
+                //         } else {
+                  //             console.log(`Message failed with error: ${responseData.messages[0]['error-text']}`);
+                  //             res.status(500).send({ message: `sms didn't send error: ${responseData.messages[0]['error-text']}`});
+                  
+                  //           }
+                  //     }
+                  // })
+                  
+                  
+                  //res.status(200).send({ message: "A verification code was sent to your mobile phone please verify", emailtoken: emailToken });
+                }
+              },
+              );
   };
+/** 
+ * @global
+ * @typedef {object} resBodyResendEmail
+ * @property {string} message An Email is resent to your account please verify
+ * @property {string} emailtoken email token to help in resending confirmation email if failed
+ */
+/**
+ * This function resends confirmation email if there was a problem with user mail box 
+ * 
+ * @param {*} req the request sent from the front
+ * @param {resBodyResendEmail} res the response which is sent back to the front
+ * 
+ */
+
+exports.resendEmail = (req, res) => {
+  try {
+    jwt.verify( req.headers["x-access-token"], process.env.EMAIL_SECRET,(err, decoded) => {
+      if (err) {
+        if (err instanceof TokenExpiredError) {
+          return res.status(401).send({ message: "Unauthorized! Access Token was expired!" });
+        }
+        return res.sendStatus(401).send({ message: "Unauthorized!" });
+      }
+      
+      const newEmailtoken = jwt.sign(
+        { 
+          "id" :decoded.id,
+          "username" : decoded.username,
+          "password" :decoded.password,
+          "email" : decoded.email 
+        }, 
+        process.env.EMAIL_SECRET, {
+          expiresIn: '1d' 
+        });
+        const newVerificationCode = Math.floor(100000 + Math.random() * 900000);
+        User.findOneAndUpdate({ _id: decoded.id },{$set: {verificationCode:newVerificationCode }},{new: true}, (err, user) => {
+          console.log(user);
+          const message = `<p>You have a new email comfirmation request</p>
+          <p>Please copy this verification code to confirm your email: ${newVerificationCode}</p>
+          <p>Thank you very much</p>`;
+          sendEmail(decoded.email, "Confirm Email", message);
+          res.status(200).send({ message: "An Email is resent to your account please verify", emailtoken: newEmailtoken });
+        });
+        // const message = `<p>You have a new email comfirmation request</p>
+        // <p>Please click this email to confirm your email:</p>
+        // <a href="${process.env.BASE_URL}/auth/confirmation/${newEmailtoken}">click here to confirm your email</a>
+        // <p>Thank you very much</p>`;
+        
+      });
+    } catch (err) {
+      res.status(500).send("error in token verification in resend email");
+    }
+    
+  }
   /** 
    * @global
-   * @typedef {object} resBodyResendEmail
+   * @typedef {object} resBodyResendSMS
    * @property {string} message An Email is resent to your account please verify
    * @property {string} emailtoken email token to help in resending confirmation email if failed
    */
@@ -94,13 +187,13 @@ exports.signup = function signup(req, res) {
    * This function resends confirmation email if there was a problem with user mail box 
    * 
    * @param {*} req the request sent from the front
-   * @param {resBodyResendEmail} res the response which is sent back to the front
+   * @param {resBodyResendSMS} res the response which is sent back to the front
    * 
    */
   
-  exports.resendEmail = (req, res) => {
+  exports.resendSMS = async (req, res) => {
     try {
-      jwt.verify( req.headers["x-access-token"], process.env.EMAIL_SECRET,(err, decoded) => {
+      await jwt.verify( req.headers["x-access-token"], process.env.EMAIL_SECRET,(err, decoded) => {
         if (err) {
           if (err instanceof TokenExpiredError) {
             return res.status(401).send({ message: "Unauthorized! Access Token was expired!" });
@@ -108,7 +201,7 @@ exports.signup = function signup(req, res) {
           return res.sendStatus(401).send({ message: "Unauthorized!" });
         }
         
-        const newEmailtoken = jwt.sign(
+        const newSMStoken = jwt.sign(
           { 
             "id" :decoded.id,
             "username" : decoded.username,
@@ -121,18 +214,26 @@ exports.signup = function signup(req, res) {
           const newVerificationCode = Math.floor(100000 + Math.random() * 900000);
           User.findOneAndUpdate({ _id: decoded.id },{$set: {verificationCode:newVerificationCode }},{new: true}, (err, user) => {
             console.log(user);
-            const message = `<p>You have a new email comfirmation request</p>
-            <p>Please copy this verification code to confirm your email: ${newVerificationCode}</p>
-            <p>Thank you very much</p>`;
-            sendEmail(decoded.email, "Confirm Email", message);
-            res.status(200).send({ message: "An Email is resent to your account please verify", emailtoken: newEmailtoken });
-          });
-          // const message = `<p>You have a new email comfirmation request</p>
-          // <p>Please click this email to confirm your email:</p>
-          // <a href="${process.env.BASE_URL}/auth/confirmation/${newEmailtoken}">click here to confirm your email</a>
-          // <p>Thank you very much</p>`;
+            const from = "Twitter Team"
+            const to = user.phoneNumber
+            const text = `Please copy this verification code to confirm your mobile phone: ${newVerificationCode} Thank you very much`;
+            const message = "A verification code was resent to your mobile phone please verify";
+            const isSent = sendSMS(from, to, text );
+            console.log(isSent);
+            if(isSent){
+              res.status(200).send({ message: message, emailtoken: newSMStoken });
+            }else{
+              res.status(500).send({ message: `sms didn't send error`});
+            }
+            //sendSMS(from, to, text , newSMStoken, message, req,res);
+            //res.status(200).send({ message: "An Email is resent to your account please verify", emailtoken: newSMStoken });
+        });
+        // const message = `<p>You have a new email comfirmation request</p>
+        // <p>Please click this email to confirm your email:</p>
+        // <a href="${process.env.BASE_URL}/auth/confirmation/${newEmailtoken}">click here to confirm your email</a>
+        // <p>Thank you very much</p>`;
 
-    });
+  });
   } catch (err) {
     res.status(500).send("error in token verification in resend email");
   }
